--- a/app/comp/section2/section2.module.css
+++ b/app/comp/section2/section2.module.css
@@ -766,10 +766,10 @@
 
 @media (max-width: 480px) {
   .section2 {
-    min-height: 90dvh;
+    min-height: 72dvh;
   }
   .backgroundImage {
-    top: 76%;
+    top: 68%;
    height: 22%;
     min-height: 32rem;
   }
@@ -805,8 +805,15 @@
     font-size: 12px;
   }
   .mobileCarousel {
-   
-    top: 51dvh;
+
+    top: 40dvh;
    
   }
+  .cardsContainer {
+  position: relative;
+  top: 0dvh;
+  width: 100%;
+  height: 100%;
+  z-index: 7;
+}
 }
