--- a/app/comp/section2/section2.module.css
+++ b/app/comp/section2/section2.module.css
@@ -130,14 +130,14 @@
 }
 
 /* Mobile Carousel Container */
-.mobileCarousel {
+/* .mobileCarousel {
   display: none;
   width: 100%;
   height: 400px;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-}
+} */
 
 .card {
   position: absolute;
@@ -805,8 +805,8 @@
     font-size: 12px;
   }
   .mobileCarousel {
-
-    top: 40dvh;
+position: absolute;
+    top: 20dvh;
    
   }
   .cardsContainer {
