--- a/app/comp/section2/section2.module.css
+++ b/app/comp/section2/section2.module.css
@@ -130,14 +130,14 @@
 }
 
 /* Mobile Carousel Container */
-/* .mobileCarousel {
+.mobileCarousel {
   display: none;
   width: 100%;
   height: 400px;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-} */
+}
 
 .card {
   position: absolute;
@@ -293,7 +293,7 @@
 @media (min-width: 1600px) and (max-width: 2000px) {
   .section2 {
    
-    min-height: 170dvh;
+    height: 170dvh;
   
   }
   .backgroundImage {
@@ -622,7 +622,7 @@
 
 @media (max-width: 768px) {
   .section2 {
-    min-height: 96dvh;
+    height: 96dvh;
   }
   .backgroundImage {
     top: 66%;
@@ -766,10 +766,10 @@
 
 @media (max-width: 480px) {
   .section2 {
-    min-height: 72dvh;
+    min-height: 90dvh;
   }
   .backgroundImage {
-    top: 68%;
+    top: 76%;
    height: 22%;
     min-height: 32rem;
   }
@@ -805,15 +805,8 @@
     font-size: 12px;
   }
   .mobileCarousel {
-position: absolute;
-    top: 20dvh;
+   
+    top: 51dvh;
    
   }
-  .cardsContainer {
-  position: relative;
-  top: 0dvh;
-  width: 100%;
-  height: 100%;
-  z-index: 7;
-}
 }
