--- a/app/comp/card/carousel.module.css
+++ b/app/comp/card/carousel.module.css
@@ -240,6 +240,22 @@
     height: 3px;
 }
 
+
+
+
+
+
+@media (min-width: 2000px) {
+ .carousel {
+        width: 100%;
+        height: 740px; /* гарантирует область контента; внутренности карточки абсолютно позиционируются */
+        margin: 124px 0 0 25dvh;
+      
+    }
+}
+
+
+
 /* Мобильные: показывать ровно одну карточку и сохранить навигацию видимой */
 @media (max-width: 480px) {
     .carousel {
