--- a/app/comp/footer/footer.module.css
+++ b/app/comp/footer/footer.module.css
@@ -107,7 +107,27 @@
 
 
 
+@media (min-width: 2000px)  { 
 
+ .footerNav {
+        gap: 100px;
+        bottom: 10%; 
+        padding: 0 16px;
+    
+        row-gap: 16px;
+    }
+
+    .navLink { font-size: 22px; }
+
+    .callButton {
+        width: 166px;
+        height: 50px;
+    }
+  
+  
+
+
+}
 
 
 @media (min-width: 768px) and (max-width: 1000px) { 
