--- a/app/comp/section4/section4.module.css
+++ b/app/comp/section4/section4.module.css
@@ -37,14 +37,7 @@
   z-index: 2;
 }
 
-.leftImageContainer {
-  position: absolute;
-  left: 15dvh;
-  top: 18dvh;
-  width: 8.6rem;
-  height: 19.2rem;
-  z-index: 2;
-}
+
 
 .rightImage {
   position: absolute;
@@ -64,23 +57,7 @@
   z-index: 2;
 }
 
-.rightImageContainer {
-  position: absolute;
-  right: 15dvh;
-  top: 45dvh;
-  width: 9rem;
-  height: 20.2rem;
-  z-index: 2;
-}
 
-.additionalImageContainer {
-  position: absolute;
-  right: 10dvh;
-  top: 18dvh;
-  width: 4.5rem;
-  height: 10.2rem;
-  z-index: 2;
-}
 
 /* ===== ГЛАВНЫЙ БЛОК С КОНТЕНТОМ ===== */
 .heroBlock {
@@ -148,14 +125,7 @@
   z-index: 5;
 }
 
-.smallDiamondContainer {
-  position: absolute;
-  top: calc(18dvh + 19.2rem - 2.5rem);
-  left: calc(15dvh + 4.3rem - 1.5rem);
-  width: 2.7rem;
-  height: 5rem;
-  z-index: 5;
-}
+
 
 .rightSmallDiamond {
   position: absolute;
@@ -222,58 +192,127 @@
   margin: 0;
 }
 
-/* ===== БОЛЬШИЕ ЭКРАНЫ (1700px - 2300px) ===== */
-@media (min-width: 1700px) and (max-width: 2300px) {
+
+@media (min-width: 1700px)  {
+  .title {
+  width: 20.7rem;
+  height: 7.3rem;
+ 
+  font-size: 5.75rem;
+ 
+  line-height: 5.6rem;
+  
+}
+
+.description {
+  width: 20rem;
+  height: 11.6rem;
+
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.8;
+  letter-spacing: 0;
+  text-align: left;
+  margin: 0;
+}
   .heroBlock {
     gap: 12vh;
   }
   
   .leftImage {
-    width: 9.9rem;
-    height: 21.1rem;
-  }
+ 
+  left: 15dvh;
+  top: 18dvh;
+  width: 17dvh;
+  height: 38dvh;
+ 
+}
+
+
+
+.rightImage {
+ 
+  right: 15dvh;
+  top: 45dvh;
+   width: 17dvh;
+  height: 38dvh;
+  /* width: 9rem;
+  height: 20.2rem; */
   
-  .rightImage {
-    width: 10.3rem;
-    height: 22.1rem;
-  }
+}
+
+.additionalImage {
+
+  right: 10dvh;
+  top: 18dvh;
+  width: 8dvh;
+  height: 18dvh;
   
-  .additionalImage {
-    right: 10dvh;
-    top: 15dvh;
-    width: 5.8rem;
-    height: 12rem;
-  }
-  
+}
   .smallDiamond {
-    top: calc(18dvh + 21.1rem - 2.5rem);
-    left: calc(15.3dvh + 4.95rem - 1.5rem);
-    width: 2.7rem;
-    height: 5rem;
-  }
   
-  .rightSmallDiamond {
-    top: calc(45dvh + 22.1rem - 2.5rem);
-    right: calc(14.8vh + 5.15rem - 1.5rem);
-    width: 2.7rem;
-    height: 5rem;
-  }
+    top: calc(52.5dvh + 0.3dvh);
+  left: calc(18.1dvh + 4.3rem - 1.5rem);
+  width: 3rem;
+  height: 5.3rem;
+ 
+}
+
+
+
+.rightSmallDiamond {
+
+  top: calc(57.5dvh + 22.3dvh );
+  right: calc(17dvh + 4.5dvh);
+  width: 3rem;
+  height: 5.3rem;
   
-  .additionalSmallDiamond {
-    top: calc(15dvh + 12rem - 1.25rem);
-    right: calc(10dvh + 2.9rem - 0.75rem);
-    width: 1.4rem;
-    height: 2.6rem;
-  }
+}
+
+.additionalSmallDiamond {
+ 
+  top: calc(24.9dvh + 9.5dvh );
+  right: calc(10dvh + 2.6dvh);
+  width: 1.5rem;
+  height: 2.7rem;
+}
   
-  .bottomBlock {
+  /* .bottomBlock {
     gap: 12dvh;
-  }
+  } */
   .diamond {
  
-  top: 30dvh;
+  top: 27dvh;
   left: 50%;
+   width: 9rem;
+  height: 16.5rem;
+}
+.bottomBlock {
+ 
+  bottom: 9dvh;
+  left: 50%;
+ 
+  gap: 15.5dvh;
+ 
+}
+
+.bottomTitle {
+  width: 22rem;
+  height: 18.9rem;
+ line-height: 1.0;
+  font-size: 3.5rem;
+ 
   
+}
+
+.bottomText {
+  width: 19.9rem;
+  height: 11.9rem;
+ 
+  font-size: 1.2rem;
+ 
+  line-height: 1.8;
+ 
 }
 }
 
@@ -557,8 +596,8 @@
   }
   
   .leftImage {
-    left: 5dvh;
-    top: 23dvh;
+    left: 3dvh;
+    top: 25dvh;
     width: 6.25rem;
     height: 15.6rem;
   }
@@ -575,8 +614,8 @@
   }
   
   .smallDiamond {
-    top: calc(23dvh + 15.6rem - 1.9rem);
-    left: calc(5dvh + 3.125rem - 0.9rem);
+    top: calc(25dvh + 15.6rem - 1.9rem);
+    left: calc(1dvh + 4.4rem - 0.9rem);
     width: 1.9rem;
     height: 3.75rem;
   }
@@ -690,8 +729,8 @@
   }
   
   .smallDiamond {
-    top: calc(25dvh + 22dvh - 1.9rem);
-    left: calc(3dvh + 5dvh - 0.9rem);
+    top: calc(24dvh + 15.6rem - 1.9rem);
+    left: calc(1dvh + 4.4rem - 0.9rem);
     width: 1.9rem;
     height: 3.75rem;
   }
