--- a/app/comp/section5/section5.module.css
+++ b/app/comp/section5/section5.module.css
@@ -144,7 +144,74 @@
 }
 
 
-/* ===== БОЛЬШИЕ ЭКРАНЫ (до 1440px) ===== */
+
+
+@media (min-width: 1440px) {
+.section5 {
+  width: 100%;
+  /* min-height: 55dvh; */
+ min-height: 40rem;
+}
+
+/* ===== КОНТЕЙНЕР КОНТЕНТА ===== */
+.contentRow {
+  position: relative;
+  height: 100%;
+}
+
+
+
+
+
+/* ===== ОСНОВНОЕ ИЗОБРАЖЕНИЕ ===== */
+.imageBox {
+  position: absolute;
+  top: -8vh;
+  left: 20.31vw;
+  width: 15.3rem;
+  height: 34.1rem;
+  z-index: 5;
+}
+
+
+
+
+/* ===== ТЕКСТОВЫЙ БЛОК ===== */
+.textBlock {
+ 
+  top: 0;
+  left: calc(35.31vw + 15.3rem + 6.25rem);
+  width: 22rem;
+
+}
+
+.text {
+ 
+ 
+  font-size: 2.7rem;
+ 
+  line-height: 0.96;
+ 
+}
+
+/* ===== КНОПКА ПРИЗЫВА К ДЕЙСТВИЮ ===== */
+.ctaButton {
+  margin-top: 2.5rem;
+  width: 15.4rem;
+  height: 3rem;
+
+  
+  font-size: 0.95rem;
+  letter-spacing: 0.08em;
+ 
+}
+
+.ctaButton:hover {
+  opacity: 0.85;
+}
+}
+
+
 @media (max-width: 1440px) {
   .cloudRight {
     right: -20rem;
