--- a/app/comp/section7/section7.module.css
+++ b/app/comp/section7/section7.module.css
@@ -58,7 +58,12 @@ background: linear-gradient(180.00deg, rgba(226, 211, 206, 0),rgba(226, 211, 206
 
 
 
-@media (min-width: 2000px) and (max-width: 2300px) {
+@media (min-width: 2000px) {
+    .section7 {
+    width: 100%;
+    height: 1900px;
+    
+}
     .title {
         top: 40px;
         width: 220px;
@@ -76,14 +81,14 @@ background: linear-gradient(180.00deg, rgba(226, 211, 206, 0),rgba(226, 211, 206
         width: 100%;
         max-width: 2300px;
         height: auto;
-        bottom: 0%;
+        bottom: -70px;
     }
 
     .gradient {
         width: 100%;
         max-width: 2300px;
         height: 500px;
-        bottom: 46%;
+        bottom: 830px;
     }
 }
 
