--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-  /* max-width: 2300px; */
+   max-width: 2400px; 
 
   margin: 0 auto;
   background-color: #f5f5f5;
